--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,17 +1,8 @@
 <!--stadium.wxml-->
 <view class="container">
-    <view class='bg-sear'>
-        <view class="searchBox">
-            <view class='section' bindtap='toSearchPage'>
-                <image src='../../images/icon/search.png' class='search-img'></image>
-                <text class='placeholder'>请输入昵称/ID</text>
-            </view>
-        </view>
-    </view>
-    <view class="content">
+    <view >
         <!--    分类模块-->
-        <view>
-            <tabList tabList="{{tabList}}" bind:PostCurrentIndex="getCurrentIndex"></tabList>
+        <view class="content">
             <swiper
                     autoplay="{{true}}" duration="{{800}}" current="{{currentIndex}}">
                 <block wx:for="{{backgroundList}}" wx:key="*this">
@@ -20,80 +11,23 @@
                     </swiper-item>
                 </block>
             </swiper>
-            <view class="dots">
-                <view class="dotsRow">
-                    <view wx:for="{{backgroundList}}" wx:key="index"
-                          class="{{index == currentIndex ? ' active' : 'dotsItem'}}"></view>
-                </view>
-            </view>
         </view>
         <!--    新人专享-->
-        <view class="newPerson">
-            <view class="flex-box flex-space per-title">
-                <view>
-                    <text class="t1">新人专享</text>
-                    <text class="line">|</text>
-                    <text class="t2">30元起</text>
-                </view>
-                <view class="flex-center">
-                    更多 <image src="../../images/icon/right.png" style="width:24rpx;height:20rpx"></image>
+        <view class="tab_content">
+            <view class="tab">
+                <view class="tab_item" wx:for="{{tabList}}" wx:key="{{item.id}}" bindtap="chooseTabList" data-index="{{index}}">
+                    {{item.name}}
                 </view>
             </view>
-            <view class="newPerson-part">
-                <view class="person-box" wx:for="{{imgList}}" wx:key="index">
-                    <view style="position:relative">
-                        <!--?x-oss-process=image/crop,x_0,y_50,w_50,h_50,center-->
-                        <image src="../../images/timg.jpeg"></image>
-                        <view class="module">
-                            <view>羽毛球陪练</view>
-                            <view style="margin-top:4rpx">￥30/h</view>
-                        </view>
-                    </view>
-                    <view class="name cutTxt1">青菜坨坨</view>
-                    <view class="person">新人专享</view>
-                </view>
-            </view>
-        </view>
-        <!--最新赛事-->
-        <view>
-            <view class="newPerson">
-                <view class="flex-box flex-space per-title">
-                    <view>
-                        <text class="t1">最新赛事</text>
-                        <text class="line">|</text>
-                        <text class="t2">可在线报名</text>
-                    </view>
-                    <view class="flex-center">
-                        更多赛事>
-                    </view>
-                </view>
-            </view>
-            <scroll-view scroll-x enable-flex>
-                <view class="match">
-                    <view class="match-box " wx:for="{{matchList}}" wx:key="index">
-                        <view>
-                            萍乡启创队
-                        </view>
-                        <image src="../../images/test/match.png" class="vsLogo"></image>
-                        <view>
-                            长沙四方坪队
-                        </view>
-                        <view class="time">08.16 15:00</view>
-                    </view>
-                </view>
 
-            </scroll-view>
-        </view>
-        <!--猜你喜欢-->
-        <view class="favorite">
-            <view class="newPerson notMargin">
-                <text class="t1">猜你喜欢</text>
+            <view class="flex-box flex-space title">
+                <text>教师代表</text>
+                <view class="watchAll">查看全部</view>
             </view>
-            <recommendItem list="{{orderEntryList}}"></recommendItem>
-
+            <teacher teacher="{{teacher}}"></teacher>
         </view>
+
     </view>
 
 
 </view>
-<wxs module="wxs" src="../../wxs/number.wxs"/>
