--- a/pages/personal-space/index.wxss
+++ b/pages/personal-space/index.wxss
@@ -1,5 +1,5 @@
 
-.container{
+.container {
     padding-bottom: 138rpx;
 }
 
@@ -14,104 +14,170 @@
     min-height: 600rpx;
     position: relative;
     bottom: 60rpx;
-    padding: 0 32rpx;
+    padding: 32rpx 32rpx;
 }
 
-.userInfo {
-    padding-top: 52rpx;
-    padding-bottom: 90rpx;
+.description {
+    margin-top: 60rpx;
+    border: 1rpx solid #ededed;
+    padding: 40rpx 20rpx 20rpx;
+    position: relative;
+
+    border-radius: 12rpx;
 }
 
-.userInfo .userInfo-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-.userInfo .userInfo-row .userName {
-    color: #333;
-    font-size: 36rpx;
-    font-weight: 700;
-}
-
-.userInfo .userInfo-row .likeBtn {
-    width: 96rpx;
-    height: 52rpx;
-    border-radius: 26rpx;
-
-    font-size: 24rpx;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.IsLike{
-    border: 2rpx solid rgba(241, 75, 127, 1);
-    color: #F14B7F;
-}
-
-.like{
-    border: 2rpx solid #aaa;
-    color: #aaa;
-}
-
-
-.userInfo .userInfo-row1 {
-    margin-top: 8rpx;
-    margin-bottom: 22rpx;
-    color: #c9c9c9;
-    font-size: 24rpx;
-}
-
-.userInfo .copy {
-    padding: 6rpx 20rpx;
-    background: rgba(245, 245, 245, 1);
-    border-radius: 8rpx;
-    color: #999999;
-    font-size: 24rpx;
-}
-
-.info {
-    font-size: 24rpx;
-    color: #999;
-    margin-bottom: 96rpx;
-}
-
-.info-title {
-    font-size: 30rpx;
-    color: #333;
-    font-weight: 700;
-    margin-bottom: 24rpx;
-}
-
-.info .middle-row {
-    margin: 20rpx 0;
-    display: flex;
-    align-items: center;
-}
-
-.info .middle-row .item {
-    min-width: 68rpx;
-    padding:4rpx;
-    height: 36rpx;
-    border-radius: 8rpx;
-    border: 2rpx solid rgba(56, 168, 255, 1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #38A8FF;
-    font-size: 22rpx;
-    margin-right: 20rpx;
-}
-
-.empty {
-    padding: 50rpx 0;
+.description .t1 {
+    color: #E67A62;
     font-size: 28rpx;
-    color: #333;
-    font-weight: 700;
-    text-align: center;
+    flex-shrink: 0;
 }
+
+.description .t2 {
+    color: #333;
+    font-size: 26rpx;
+    margin-left: 10rpx;
+    line-height: 46rpx;
+}
+
+.description .title {
+    color: #fff;
+    font-size: 26rpx;
+    font-weight: 600;
+    margin-bottom: 20rpx;
+    position: absolute;
+    top: -24rpx;
+    left: 36%;
+    border-radius: 8rpx;
+    padding: 6rpx;
+    min-width: 200rpx;
+    text-align: center;
+
+    box-sizing: border-box;
+    background: #FF9480;
+
+
+}
+
+.description .row {
+    min-height: 60rpx;
+    display:flex;
+}
+
+.p1 {
+    background: #76C0D9;
+}
+
+.p2 {
+    background: #FF99C0;
+}
+
+.p3 {
+    background: #4EA39E;
+}
+
+.p4 {
+    background: #E5C9BB;
+}
+
+.p5 {
+    background: #EAC14B;
+}
+
+/*.userInfo {*/
+/*    padding-top: 52rpx;*/
+/*    padding-bottom: 90rpx;*/
+/*}*/
+
+/*.userInfo .userInfo-row {*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    align-items: center;*/
+/*}*/
+
+
+/*.userInfo .userInfo-row .userName {*/
+/*    color: #333;*/
+/*    font-size: 36rpx;*/
+/*    font-weight: 700;*/
+/*}*/
+
+/*.userInfo .userInfo-row .likeBtn {*/
+/*    width: 96rpx;*/
+/*    height: 52rpx;*/
+/*    border-radius: 26rpx;*/
+
+/*    font-size: 24rpx;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*}*/
+
+/*.IsLike{*/
+/*    border: 2rpx solid rgba(241, 75, 127, 1);*/
+/*    color: #F14B7F;*/
+/*}*/
+
+/*.like{*/
+/*    border: 2rpx solid #aaa;*/
+/*    color: #aaa;*/
+/*}*/
+
+
+/*.userInfo .userInfo-row1 {*/
+/*    margin-top: 8rpx;*/
+/*    margin-bottom: 22rpx;*/
+/*    color: #c9c9c9;*/
+/*    font-size: 24rpx;*/
+/*}*/
+
+/*.userInfo .copy {*/
+/*    padding: 6rpx 20rpx;*/
+/*    background: rgba(245, 245, 245, 1);*/
+/*    border-radius: 8rpx;*/
+/*    color: #999999;*/
+/*    font-size: 24rpx;*/
+/*}*/
+
+/*.info {*/
+/*    font-size: 24rpx;*/
+/*    color: #999;*/
+/*    margin-bottom: 96rpx;*/
+/*}*/
+
+/*.info-title {*/
+/*    font-size: 30rpx;*/
+/*    color: #333;*/
+/*    font-weight: 700;*/
+/*    margin-bottom: 24rpx;*/
+/*}*/
+
+/*.info .middle-row {*/
+/*    margin: 20rpx 0;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
+
+/*.info .middle-row .item {*/
+/*    min-width: 68rpx;*/
+/*    padding:4rpx;*/
+/*    height: 36rpx;*/
+/*    border-radius: 8rpx;*/
+/*    border: 2rpx solid rgba(56, 168, 255, 1);*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    color: #38A8FF;*/
+/*    font-size: 22rpx;*/
+/*    margin-right: 20rpx;*/
+/*}*/
+
+/*.empty {*/
+/*    padding: 50rpx 0;*/
+/*    font-size: 28rpx;*/
+/*    color: #333;*/
+/*    font-weight: 700;*/
+/*    text-align: center;*/
+/*}*/
 
 
 .foot-btn {
@@ -119,17 +185,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:0 32rpx;
-    position:fixed;
-    bottom:0;
-    left:0;
-    width:100%;
+    padding: 0 32rpx;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     box-sizing: border-box;
-    background:#fff;
+    background: #fff;
 }
 
 .foot-btn .btn {
-    width: 328rpx;
+    width: 650rpx;
     height: 90rpx;
     display: flex;
     align-items: center;
@@ -139,7 +205,7 @@
 .foot-btn .btn1 {
     border-radius: 46rpx;
     border: 2rpx solid #1EC19A;
-    color:#1EC19A;
+    color: #1EC19A;
     font-size: 32rpx;
     font-weight: 600;
 
