--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -11,26 +11,24 @@ page {
     position: relative;
     display: flex;
     flex-direction: column;
-    background: #304653;
 }
-
-.top-bg {
+.top-bg{
     position: absolute;
-    top: 0;
-    left: 0;
+    top:0;
+    left:0;
     height: 504rpx;
-    width: 100%;
+    width:100%;
     z-index: -1;
 }
-
 .header {
 
+    height: 504rpx;
 }
 
 .userInfo {
     display: flex;
     margin-left: 64rpx;
-    margin-top: 48rpx;
+    margin-top:48rpx;
 }
 
 .userInfo .userAvatar {
@@ -45,25 +43,37 @@ page {
     font-size: 40rpx;
     color: #fff;
 }
-
 .userInfo .message {
     font-size: 24rpx;
     color: #fff;
-    margin-top: 20rpx;
+    margin-top:20rpx;
 }
 
 .userInfo .editor {
     width: 32rpx;
     height: 32rpx;
-    margin-left: 20rpx;
+    margin-left:20rpx;
 }
-
+.header .item{
+    flex:1;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color:#fff;
+}.header .item .t1{
+     opacity: .8;
+     font-size:22rpx;
+ }.header .item .t2{
+      margin-top:8rpx;
+      font-size:36rpx;
+  }
 .content {
     box-sizing: border-box;
-    margin-top: 40rpx;
+    margin-top:-124rpx;
     min-height: 400rpx;
     flex: 1;
-    padding: 0 32rpx;
+    padding:0 32rpx;
 }
 
 .content .list {
@@ -71,8 +81,8 @@ page {
     align-items: center;
     font-size: 26rpx;
     color: #929292;
-    background-color: #fff;
-    border-radius: 16rpx;
+    background-color:#fff;
+    border-radius:16rpx;
 }
 
 .content .list image {
@@ -81,26 +91,17 @@ page {
     margin-bottom: 4rpx;
 }
 
-.list-content {
-
-    box-sizing: border-box;
-    border-radius: 20rpx;
-    width:100%;
-}
-
 .settingList {
     display: flex;
-    padding: 0 30rpx;
-    border-radius: 12rpx 12rpx 0 0;
     flex-direction: column;
     margin-top: 30rpx;
-    background-color: #fff;
+    background-color:#fff;
 }
 
 .settingList .list-row {
     height: 120rpx;
     align-items: center;
-
+    padding: 0 30rpx;
     border-radius: 16rpx;
 }
 
@@ -133,7 +134,6 @@ page {
 .foot {
     background: #fff;
     padding-bottom: 30rpx;
-    border-radius: 0 0 12rpx 12rpx;
 }
 
 .foot .btn {
@@ -146,5 +146,5 @@ page {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 64rpx;
+    margin-top:64rpx;
 }
