--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,8 +26,16 @@ swiper.pic-swiper .banner {
 
 .container {
     background: #fff;
+    position: relative;
 }
-
+.top-bg{
+    position: absolute;
+    top:0;
+    left:0;
+    height: 504rpx;
+    width:100%;
+    z-index: -1;
+}
 .container .bg-sear {
     width: 100%;
     background-color: #1EC19A;
